# RotationNet

./: .gitignore  create_segmentation_masks.py  pyproject.toml  segmentation_mask_generation.ipynb
.ipynb_checkpoints/: segmentation_mask_generation-checkpoint.ipynb
logs/: mask50445552.err  mask50477065.err  segment50442477.err  segment50477793.err  segment50479283.err
model_training_configs/: ConvNeXtBaseBackbone.json  ConvNeXtTinyBackbone.json  DryRun.json  MobileNetV3Backbone.json  MobileNetV3LargeManualTest.json  Resnet50Backbone.json
shell_scripts/: sync_wandb
slurm_scripts/: apply_masks  apply_masks.slurm  convert_to_jpeg  convert_to_jpeg.slurm  profile_rotated_image_dataset  segment  segment.slurm  synthetic_data_generation  synthetic_data_generation.slurm  train_model  train_model.sh  train_model.slurm  train_model_test
src/RotationNet/: bulk_image_download.py  convert_images.py  create_segmentation_masks.py  synthetic_data_generation.py
src/RotationNet/model/: train.py
src/RotationNet/utils/: coco_utils.py  smb_file_transfer.py
src/SkewNet/: apply_segmentation_masks.py  bulk_image_download.py  convert_images.py  create_label_file.py  create_segmentation_masks.py  ffcv_dataset_conversion.py  rotate_images.py  save_masked_images.py  synthetic_data_generation.py  train_model.py
src/SkewNet/model/: RotationNet.py  (+6 more)
src/notebooks/: combining_skew_data.ipynb  exploratory_data_analysis.ipynb  segmentation_exploration.ipynb  segmentation_mask_generation.ipynb  show_images.ipynb  visualize_results.ipynb
test/SkewNet/: test_synthetic_data_generation.py
(+17 files in other folders)
